@@ -1,3 +1,12 @@
+2009-07-21  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* src/calendar/lightning/content/imip-bar.js: an exception occurs
+	when retrieving itip item containing a recurrence-id without a
+	master occurence. The exception is caught and we avoid displaying
+	the imip bar at that moment.
+	Fixed a case where no user calendars belonging to the user would
+	be found.
+
 2009-07-20  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	* src/calendar/providers/composite/calCompositeCalendar.js:
